--- a/css/estilos.css
+++ b/css/estilos.css
@@ -42,9 +42,10 @@ header {
     padding-bottom: 10px;
 }
 .busca,
+.busca button,
 .menu-departamentos {
     float: left;
-    background-color: #dcdcdc;
+    background-color: #cccac6;
     font-weight: bold;
     text-transform: uppercase;
     margin-right: 10px;
@@ -68,6 +69,7 @@ header {
     clear: left;
     padding-top: 10px;
     padding-bottom: 10px;
+    background-color: #8c4ce0;
 }
 .busca input[type=search] {
     width: 170px;
@@ -75,6 +77,7 @@ header {
 .destaque {
     margin-top: 10px;
     padding-bottom: 10px;
+    /* background-color: #e5ddf0; */
 }
 .painel {
     margin: 10px 0;
@@ -152,6 +155,11 @@ footer .container {
     top: 12px;
     right: 0;
 }
+.busca {
+    margin-bottom: 5px;
+    border-radius: 5px;
+    
+}
 .busca button {
  /* adicionando imagem */
     background-image: url(../img/busca.png);
@@ -164,6 +172,8 @@ footer .container {
 
  /* imagem replacement */
     text-indent: -9999px;
+    float: right;
+    
 }
 .menu-opcoes a:hover {
     color: #007dc6;
@@ -202,3 +212,6 @@ footer .container {
     transition: 0.7s cubic-bezier(.03,.68,1,.91);
 }
 /* FIM */
+.logo-mirror {
+    padding-bottom: 25px;
+}
