--- a/css/estilos.css
+++ b/css/estilos.css
@@ -218,10 +218,50 @@ footer .container {
     padding-bottom: 25px;
     border-bottom: 2px solid #6600ff;
 }
-#miga {
+.banner-destaque {
     margin-top: 14px; /* uma coisa estranha */
 }
-#miga img {
+.banner-destaque img {
     border-radius: 5px;
-    box-shadow: red;
+    /* box-shadow: red; */
+}
+/* Começa as adaptações mobile */
+/* A principio é 320px aqui embaixo, idem é pra funcionar no meu cel */
+@media (max-width: 939px) {
+    .container {
+        width: 96%;
+    }
+    header h1 {
+        text-align: center;
+    }
+    header h1 img {
+        max-width: 50%;
+    }
+    .sacola {
+        display: none;
+    }
+    .menu-opcoes {
+        position: static;
+        text-align: center;
+    }
+    .menu-opcoes ul li {
+        display: inline-block;
+        margin: 5px;
+    }
+    .busca,
+    .menu-departamentos,
+    .banner-destaque img {
+        margin-right: 0;
+        width: 100%;
+        padding-top: 12px;
+    }
+    .painel {
+        width: auto;
+    }
+    .painel li {
+        width: 30%;
+    }
+    .painel img {
+        width: 100%;
+    }
 }
